--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sanity/base": "^2.27.0",
     "@sanity/core": "^2.27.0",
+    "@sanity/dashboard": "^2.27.1",
     "@sanity/default-layout": "^2.27.0",
     "@sanity/default-login": "^2.27.0",
     "@sanity/desk-tool": "^2.27.0",
